Modify test example

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   console.image('rem.jpg', function () {
     console.log('%c\t\t如果真爱有颜色，那一定是蓝色。', 'color:#4062a0;font-weight:bold;');
   });
+
+  // console.image('rem.jpg').then(function () {
+  //   console.log('%c\t\t如果真爱有颜色，那一定是蓝色。', 'color:#4062a0;font-weight:bold;');
+  // });
 </script>
 
 </body>
