--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <h1>console.image playground. Hit Ctrl/CMD + Shift + J and check it out.</h1>
 </div>
 
-<script src="console.image.js"></script>
+<!-- <script src="console.image.js"></script> -->
+<!--
 <script>
   console.image('rem.jpg', function () {
     console.log('%c\t\t如果真爱有颜色，那一定是蓝色。', 'color:#4062a0;font-weight:bold;');
@@ -20,6 +21,18 @@
   //   console.log('%c\t\t如果真爱有颜色，那一定是蓝色。', 'color:#4062a0;font-weight:bold;');
   // });
 </script>
-
+-->
+  
+<script>
+console.log('%c %c如果真爱有颜色，那一定是蓝色。', `
+  padding: 15px 0 265px 270px;
+  border-radius: 5px;
+  background:url(http://www.52cik.com/console.image/rem.jpg) no-repeat;
+`, `
+  margin-left: -230px;
+  color:#4062a0;
+  font-weight:bold;
+`);
+</script>
 </body>
 </html>
