--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 console.log('%c %c如果真爱有颜色，那一定是蓝色。', `
   padding: 15px 0 265px 270px;
   border-radius: 5px;
-  background:url(rem.jpg) no-repeat;
+  background:url(https://52cik.github.io/console.image/rem.jpg) no-repeat;
 `, `
   margin-left: -230px;
   color:#4062a0;
